Fix T39921: Collada export creates invalid XML when using Track To constraint

Constraints are no ID...